update status of tasks

--- a/todo.txt
+++ b/todo.txt
@@ -1,13 +1,13 @@
-- ❌ se evaluará MVC (separación de lógica de negocio del control de datos y la vista)
+- 🟢 se evaluará MVC (separación de lógica de negocio del control de datos y la vista)
 - ❌ uso adecuado de HTML y CSS para mejor estética visual
-- ❌ Usuario admin se logea y puede crear capacitaciones
+- ✅ Usuario admin se logea y puede crear capacitaciones
     - ✅ Asigna la cantidad de Cupos (limitados)
     - ✅ Horarios de 10 a 10pm
     - ✅ Lunes a viernes
     - ✅ Validación de tiempos en JavaScript
-- ❌ Usuario user puede registrarse
-    - ❌ Puede hacer login
-    - ❌ Visualiza los cursos vigentes
+- ✅ Usuario user puede registrarse
+    - ✅ Puede hacer login
+    - 🟠 Visualiza los cursos vigentes
     - ❌ Se puede inscribir a cursos vigentes
     - ❌ Puede cancelar su asistencia a un curso inscrito y vigentes
 - 🟠 Almacenamiento en base de datos MySQL
