--- a/todo.txt
+++ b/todo.txt
@@ -7,8 +7,9 @@
     - ✅ Validación de tiempos en JavaScript
 - ✅ Usuario user puede registrarse
     - ✅ Puede hacer login
-    - 🟠 Visualiza los cursos vigentes
-    - ❌ Se puede inscribir a cursos vigentes
-    - ❌ Puede cancelar su asistencia a un curso inscrito y vigentes
-- 🟠 Almacenamiento en base de datos MySQL
+    - 🟢 Visualiza los cursos vigentes
+    - 🟢 Se puede inscribir a cursos vigentes
+    - 🟢 Puede cancelar su asistencia a un curso inscrito y vigentes
+- 🟢 Almacenamiento en base de datos MySQL
 - ✅ Añadir al final el required en los inputs
+- ❌ solve issues problems recommended by chrome
